[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/object_scripts/Object.gd" type="Script" id=1]
[ext_resource path="res://objects/object_scripts/SelectionIndicator.gd" type="Script" id=2]
[ext_resource path="res://materials/Bot.material" type="Material" id=3]

[sub_resource type="SpatialMaterial" id=1]
emission_enabled = true
emission = Color( 0, 1, 0.0156863, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
transmission_enabled = true
transmission = Color( 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=2]

[node name="Object" type="Spatial"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Selection" type="Spatial" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.5, 0, 0, 0, 0.6, 0, 0, 0 )

[node name="SelectionIndicator" type="Spatial" parent="Selection"]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 0, 0 )
visible = false
script = ExtResource( 2 )

[node name="Cylinder" type="CSGCylinder" parent="Selection/SelectionIndicator"]
height = 0.01
material = SubResource( 1 )

[node name="SelectionArea" type="Area" parent="Selection"]
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Selection/SelectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
width = 1.0
height = 1.0
depth = 1.0
material = ExtResource( 3 )
[connection signal="object_deselected" from="." to="Selection/SelectionIndicator" method="_on_Object_object_deselected"]
[connection signal="object_selected" from="." to="Selection/SelectionIndicator" method="_on_Object_object_selected"]
[connection signal="input_event" from="Selection/SelectionArea" to="." method="_on_SelectionArea_input_event"]
